# HappyHome

./: .gitignore  .prettierignore
backend/: .gitignore  README.md  pyproject.toml
backend/app/: enums.py  main.py  tasks.py
backend/app/api/: deps.py  main.py
backend/app/core/: celery_app.py  config.py  db.py  gemini_client.py  happyhome_client.py  myhome_client.py  openai_client.py  security.py
backend/app/crud/: __init__.py  announcement.py  announcement_analysis.py  announcement_layout.py  announcement_view.py  base.py  block.py  category.py  comment.py  condition.py  crud_announcement.py  field_modification.py  layout.py  llm_analysis_result.py  llm_output.py  page_mapping_result.py  question.py  reference_link.py  token.py  user.py  user_category.py  user_condition.py
backend/app/llm_providers/: base_provider.py  factory.py  gemini_provider.py  openai_provider.py
backend/app/models/: announcement.py  announcement_analysis.py  announcement_layout.py  announcement_view.py  block.py  category.py  comment.py  condition.py  field_modification.py  layout.py  llm_analysis_result.py  llm_output.py  page_mapping_result.py  question.py  reference_link.py  structured_analysis.py  token.py  user.py  user_category.py  user_condition.py
backend/app/pdf_analysis/: analyzer.py  information_extractor.py  layout_parsers.py  llm_content_parsers.py  parsers.py  prompts.py  schemas.py  strategy.py  utils.py
backend/app/schemas/: block.py  (+19 more)
backend/scripts/: format.sh  run_celery.sh  setup.sh
backend/tools/: prepare_pdf_layout_labeling_data.py  scrape_myhome.py  visualize_layout.py  visualize_llm_analysis_result.py
(+229 files in other folders)
